rocket-chat/manifests/01.rocket-chat-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  annotations: {}
  name: rocket-chat
spec: {}
