rocket-chat/manifests/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rocket-chat-db
  namespace: rocket-chat
spec:
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  selector:
    app: rocketchat-db
---
apiVersion: v1
kind: Service
metadata:
  name: rocket-chat
  namespace: rocket-chat
spec:
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: rocketchat
---
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: rocketchat-db
  labels:
    app: rocketchat-db
  namespace: rocket-chat
spec:
  replicas: 1
  selector:
    app: rocketchat-db
  strategy:
    type: Recreate
    recreateParams:
      post:
        failurePolicy: ignore
        execNewPod:
          volumes:
            - rocketchat-data-vol
          containerName: rocketchat-db
          command:
            - /bin/sh
            - -c
            - "sleep 60 && mongo rocket-chat-db:27017 --eval \"rs.initiate({_id: 'rs0', members: [{_id:0, host:'localhost:27017'}]})\""
  template:
    metadata:
      labels:
        app: rocketchat-db
    spec:
      containers:
        - name: rocketchat-db
          image: docker.io/mongo:4.0
          command:
            - /bin/sh
            - -c 
            - mongod --bind_ip 0.0.0.0 --port 27017 --smallfiles --oplogSize 128 --replSet rs0 --storageEngine=mmapv1
          volumeMounts:
            - name: rocketchat-data-vol
              mountPath: /data/db
          ports:
            - containerPort: 27017
              protocol: TCP
      restartPolicy: Always
      volumes:
        - name: rocketchat-data-vol
          persistentVolumeClaim:
            claimName: rocketchat-data-claim
---
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: rocketchat
  namespace: rocket-chat
  labels:
    app: rocketchat
spec:
  replicas: 1
  selector:
    app: rocketchat
  template:
    metadata:
      labels:
        app: rocketchat
    spec:
      containers:
        - name: rocketchat
          image: rocket.chat:2.4.9
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 100m
      restartPolicy: Always
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rocket-chat
  namespace: rocket-chat
spec:
  port:
    targetPort: 3000
  to:
    kind: Service
    name: rocket-chat
    weight: 100
  wildcardPolicy: None
